# dude-wheres-my-package

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  index.html  package-lock.json  package.json  pyproject.toml  script.js  style.css  tsconfig.json  updates.xml  vitest.config.ts
.github/workflows/: release.yml
chrome-extension/: manifest.json  service-worker.js
chrome-extension/lib/: api.js  carriers.js  logger.js
chrome-extension/popup/: popup.css  popup.html  popup.js
chrome-extension/tests/: api.test.js  carriers.test.js
docs/superpowers/plans/: 2026-05-04-tracking-urls-and-login-links.md  2026-05-11-web-push-notifications.md
docs/superpowers/specs/: 2026-05-11-web-push-notifications-design.md
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pv.yaml  service.yaml
mockups/: dashboard.html  extension.html  notifications.html  timeline.html
scripts/: extension-id.mjs  install-hooks.sh  pack-extension.mjs  send-telegram-notification.sh  test-postnl-sync.mjs
scripts/hooks/: pre-commit  pre-push
src/dwmp/api/: _log_stream.py  app.py  app_test.py  auth.py  dependencies.py  routes.py  routes_test.py  views.py  views_test.py
src/dwmp/carriers/: _retry.py  amazon.py  amazon_test.py  base.py  base_test.py  browser.py  browser_test.py  dhl.py  dhl_test.py  dpd.py  dpd_test.py  dragonfly.py  dragonfly_test.py  gls.py  gls_test.py  postnl.py  postnl_test.py  retry_test.py  tracking_urls.py  tracking_urls_test.py  trunkrs.py  trunkrs_test.py  ups.py  ups_test.py
src/dwmp/mockups/: __init__.py  __main__.py  generate.py  generate_test.py
src/dwmp/services/: scheduler.py  scheduler_test.py  telegram_notifier.py  telegram_notifier_test.py  tracking.py  tracking_test.py  web_push_notifier.py  web_push_notifier_test.py
src/dwmp/static/: manifest.json  sw.js
src/dwmp/static/js/: notifications.js
src/dwmp/static/ts/: index.ts  notifications.test.ts  notifications.ts  version-check.test.ts  version-check.ts
src/dwmp/storage/: repository.py  repository_test.py
src/dwmp/templates/: _account_row.html  _form_loader.html  _notification_list.html  _package_card.html  account_form_browser_push.html  account_form_credentials.html  account_form_dpd.html  account_form_postnl.html  accounts.html  base.html  login.html  logs.html  notifications.html  packages.html  track_package_form.html
src/dwmp/testing/: __init__.py  __main__.py  fixtures.py  seeders.py  seeders_test.py
