[project]
name = "dude-wheres-my-package"
version = "1.9.1"
description = "Package tracking service for PostNL, DHL, and DPD"
authors = [{ name = "Steven de Jong", email = "steven@steven-dejong.nl" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.21",
    "apscheduler>=3.11",
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "lxml>=5.3",
    "jinja2>=3.1.6",
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-recording>=0.13",
    "vcrpy>=7.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["*_test.py"]
testpaths = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dwmp"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = ""
commit_message = "chore(release): {version}"
tag_format = "v{version}"
