[project]
name = "dude-wheres-my-package"
version = "1.16.0"
description = "Package tracking service for Amazon, PostNL, DHL, and DPD"
authors = [{ name = "Steven de Jong", email = "steven@steven-dejong.nl" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.21",
    "apscheduler>=3.11",
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "lxml>=5.3",
    "jinja2>=3.1.6",
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "playwright>=1.49",
    "pyotp>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-recording>=0.13",
    "vcrpy>=7.1",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["*_test.py"]
testpaths = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dwmp"]

[tool.ruff]
target-version = "py313"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "uv lock && git add uv.lock"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
